service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arcade-svc
spec:
  selector:
    app: arcade
  ports:
    - name: http
      port: 8080
      targetPort: 7681
